change min-height to prevent flexbox collapsing when webpage is changed

--- a/book.css
+++ b/book.css
@@ -27,7 +27,7 @@ h1{
     grid-column-end:3;
     grid-row-start:2;
     grid-row-end:3;
-    min-width:943px;
+    min-width:956px;
 }
 
 table{
